# lichen

./: .containerignore  .env.example  .gitignore  Cargo.toml  Containerfile  Justfile  config.toml.example
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yaml  rust.yml
migrations/: 20260202182310_initial.down.sql  20260202182310_initial.up.sql
scripts/: base.sh  build.sh  publish.sh
src/: errors.rs  lib.rs
src/core/: application.rs  config.rs
src/domain/: mod.rs  session.rs
src/domain/auth/: mod.rs  models.rs  ports.rs  services.rs
src/domain/lichen/: data.rs  mod.rs  ports.rs  services.rs
src/inbound/http/: mod.rs  router.rs
src/inbound/http/handlers/: mod.rs
src/inbound/http/handlers/oidc/: callback.rs  login.rs  logout.rs  mod.rs  profile.rs
src/inbound/http/handlers/server/: health.rs  mod.rs
src/inbound/http/middleware/: auth.rs
src/inbound/http/responses/: health.rs  mod.rs  profile.rs  shared.rs
src/outbound/: mod.rs  session.rs
src/outbound/db/: connection.rs  error.rs  lichen.rs  mod.rs  models.rs  repository.rs
src/outbound/oidc/: adapter.rs
