[package]
name = "lichen"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/server/main.rs"
name = "lichen"

[dependencies]
axum = { version = "0.8", features = ["json", "tower-log", "multipart"] }
axum-extra = { version = "0.12.2", features = ["query", "cookie-private", "cookie"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "sensitive-headers", "compression-full", "catch-panic", "cors", "fs"] }
tokio = { version = "1.47", features = ["full"] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.34", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
openidconnect = { version = "4.0.1"}
oauth2 = "5.0.0"
tower-sessions = { version = "0.14.0", features = ["private"] }
tower-sessions-redis-store = "0.16.0"
fred = { version = "10.1.0", features = ["sentinel-client"]}
base64 = "0.22.1"
regex = "1"
mockall = "0.14.0"
axum-test = "18.2.1"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
    "fast-rng",
    "serde"
]
