[package]
name = "lichen"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/server/main.rs"
name = "lichen"

[dependencies]
axum = { version = "0.8", features = ["json", "tower-log", "multipart"] }
axum-extra = { version = "0.12", features = ["query", "cookie-private", "cookie"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "sensitive-headers", "compression-full", "catch-panic", "cors", "fs"] }
tokio = { version = "1", features = ["full"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
toml = "0.9"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
openidconnect = { version = "4"}
oauth2 = "5"
tower-sessions = { version = "0.14", features = ["private"] }
tower-sessions-redis-store = "0.16"
fred = { version = "10", features = ["sentinel-client"]}
base64 = "0.22"
regex = "1"
mockall = "0.14"
axum-test = "18"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "time", "uuid"] }
url = "2.5.8"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "v7",
    "fast-rng",
    "serde"
]
